# codex-4x-game

./: README.md  agents.md  pyproject.toml  requirements.txt
game/: __init__.py  config.py  main.py
game/core/: ai.py  mapgen.py  models.py  rules.py  saveio.py  tech.py
game/scenes/: gameplay.py  menu.py
game/ui/: hud.py  input.py  renderer.py
tests/: test_ai.py  test_hud.py  test_mapgen.py  test_research.py  test_rules.py  test_saveio.py
